--- a/Python/nestquant.ipynb
+++ b/Python/nestquant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,201 +21,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "177 ms ± 34.5 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "training_data = pd.read_parquet(r\"../datasets/BTCUSDT/\")\n",
+    "labels = pd.read_parquet(r\"../datasets/LABEL_BTCUSDT/\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_data = pd.read_parquet(r\"../datasets/BTCUSDT/\")\n",
-    "labels = pd.read_parquet(r\"../datasets/LABEL_BTCUSDT/\")\n",
+    "training_data = pd.read_parquet(r\"../datasets/BTCUSDT/\",dtype_backend='pyarrow')\n",
+    "labels = pd.read_parquet(r\"../datasets/LABEL_BTCUSDT/\",dtype_backend='pyarrow')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "labels.drop(columns=\"SYMBOL\", inplace=True)\n",
     "# training_data.index = pd.to_datetime(training_data.index, unit=\"ms\")\n",
     "full_data = training_data.join(labels, how=\"left\")\n",
     "labels.index = pd.to_datetime(labels.index, unit=\"ms\") + pd.Timedelta(hours=7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from typing import List\n",
-    "from functools import cache,lru_cache\n",
-    "\n",
-    "class Solution:\n",
-    "    def PredictTheWinner(self, nums: List[int]) -> bool:\n",
-    "        @cache\n",
-    "        def maxDiff(left,right):\n",
-    "            if left==right:\n",
-    "                return nums[left]\n",
-    "            scoreLeft = nums[left] - maxDiff(left+1,right)\n",
-    "            scoreRight = nums[right] - maxDiff(left,right-1)\n",
-    "            return max(scoreLeft,scoreRight)\n",
-    "        return maxDiff(0,len(nums)-1) >=0\n",
-    "Solution().PredictTheWinner()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>LABEL</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OPEN_TIME</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2023-07-26 15:00:00</th>\n",
-       "      <td>0.436248</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-26 16:00:00</th>\n",
-       "      <td>0.437730</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-26 17:00:00</th>\n",
-       "      <td>0.441808</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-26 18:00:00</th>\n",
-       "      <td>0.436503</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-26 19:00:00</th>\n",
-       "      <td>0.427224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-26 20:00:00</th>\n",
-       "      <td>0.433291</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-26 21:00:00</th>\n",
-       "      <td>0.425594</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-26 22:00:00</th>\n",
-       "      <td>0.428697</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-26 23:00:00</th>\n",
-       "      <td>0.433385</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-27 00:00:00</th>\n",
-       "      <td>0.418928</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-27 01:00:00</th>\n",
-       "      <td>0.414441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-27 02:00:00</th>\n",
-       "      <td>0.392545</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-27 03:00:00</th>\n",
-       "      <td>0.403769</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-27 04:00:00</th>\n",
-       "      <td>0.401282</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-27 05:00:00</th>\n",
-       "      <td>0.414026</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-27 06:00:00</th>\n",
-       "      <td>0.413251</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-27 07:00:00</th>\n",
-       "      <td>0.407534</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-27 08:00:00</th>\n",
-       "      <td>0.401870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-27 09:00:00</th>\n",
-       "      <td>0.405337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-07-27 10:00:00</th>\n",
-       "      <td>0.394789</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        LABEL\n",
-       "OPEN_TIME                    \n",
-       "2023-07-26 15:00:00  0.436248\n",
-       "2023-07-26 16:00:00  0.437730\n",
-       "2023-07-26 17:00:00  0.441808\n",
-       "2023-07-26 18:00:00  0.436503\n",
-       "2023-07-26 19:00:00  0.427224\n",
-       "2023-07-26 20:00:00  0.433291\n",
-       "2023-07-26 21:00:00  0.425594\n",
-       "2023-07-26 22:00:00  0.428697\n",
-       "2023-07-26 23:00:00  0.433385\n",
-       "2023-07-27 00:00:00  0.418928\n",
-       "2023-07-27 01:00:00  0.414441\n",
-       "2023-07-27 02:00:00  0.392545\n",
-       "2023-07-27 03:00:00  0.403769\n",
-       "2023-07-27 04:00:00  0.401282\n",
-       "2023-07-27 05:00:00  0.414026\n",
-       "2023-07-27 06:00:00  0.413251\n",
-       "2023-07-27 07:00:00  0.407534\n",
-       "2023-07-27 08:00:00  0.401870\n",
-       "2023-07-27 09:00:00  0.405337\n",
-       "2023-07-27 10:00:00  0.394789"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "labels.tail(20)"
    ]
   },
   {
