--- a/Python/codetour-1.ipynb
+++ b/Python/codetour-1.ipynb
@@ -19,10 +19,10 @@
    ],
    "source": [
     "import sys\n",
-    "sys.stdin = open(\n",
-    "    r'C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp', 'r')\n",
-    "sys.stdout = open(\n",
-    "    r'C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out', 'w')\n",
+    "# sys.stdin = open(\n",
+    "#     r'C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp', 'r')\n",
+    "# sys.stdout = open(\n",
+    "#     r'C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out', 'w')\n",
     "input = sys.stdin.readline\n",
     "n, m = map(int, input().split())\n",
     "image = []\n",
